--- a/src/views/viewsStyles/appStyles.css
+++ b/src/views/viewsStyles/appStyles.css
@@ -1,6 +1,12 @@
 .app{
-    width: 100vw;
     height: 100vh;
-    display: flex;
+
     overflow: hidden;
+}
+.app-container{
+    box-sizing: border-box;
+    /*overflow: hidden;*/
+
+    /*display: flex;*/
+    /*flex-direction: row;*/
 }
