--- a/src/views/viewsStyles/welcomeStyles.css
+++ b/src/views/viewsStyles/welcomeStyles.css
@@ -1,7 +1,8 @@
 .welcome{
+    /*position: absolute;*/
     background-color: #060623;
     height: 100vh;
-    width: 100vw;
+    min-width: 100vw;
     text-align: center;
     display: flex;
     flex-direction: column;
