--- a/src/views/viewsStyles/postPageStyles.css
+++ b/src/views/viewsStyles/postPageStyles.css
@@ -1,7 +1,7 @@
 .post-page{
     box-sizing: border-box;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
 
     background-color: #1e85b4;
 
@@ -14,14 +14,14 @@
 }
 
 .post-page h1{
-    font-size: 3rem;
+    font-size: 2rem;
 }
 
 .post-page h2{
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 .post-page form{
-    background-color: red;
+    /*background-color: red;*/
     font-size: 1rem;
 
 }
@@ -33,4 +33,14 @@
     /*width: 70%;*/
     /*justify-content: center;*/
     /*align-items: center;*/
+}
+
+.form-field input{
+    border-radius: 10px;
+    margin: 5%;
+}
+.user-comment textarea{
+    height: 20vh;
+    border-radius: 10px;
+    padding: 5%;
 }
